--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.48.1",
     "@types/node": "^22.8.0"
+  },
+  "dependencies": {
+    "randomstring": "^1.3.0"
   }
 }
